Changes in section about author

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Projekt HTML CSS 2023/2024</title>
     <link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/style.css" >
+    <link rel="stylesheet" href="css/style.css" >
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
     <script src="script.js"></script>
   </head>
@@ -52,7 +52,7 @@
         <aside>
           <section class="widget">
             <h2>O autorze</h2>
-            <img src="assets\autor.jpg" alt="Author's photo">
+            <img src="https://bi.im-g.pl/im/2b/0c/1b/z28364331IH,Wiosna-w-Polsce---zdjecie-ilustracyjne.jpg" alt="Author's photo">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deserunt dicta velit quae! Eligendi, soluta maxime. Libero beatae, hic fugit fugiat praesentium qui neque deserunt facere aspernatur quam illo eligendi quia.
             Adipisci numquam temporibus accusamus a animi, nesciunt veritatis voluptatum optio atque minus sapiente eos ipsum eligendi quidem aliquam architecto nemo? Dignissimos eum impedit nulla quaerat doloremque, excepturi voluptatibus ab error?</p>
           </section>
