--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
       </main>
 
       <footer>
-        
-        <p>Copyright 	&copy; by WBS Students 2023/2024 FE </p>
-        <i class="fab fa-instagram fa-spin"></i>
+        <p>Copyright &copy; by WSB Students 2023/2024 PF</p>
+        <div class="socialmedia">
+          <a href="#"><i class="fab fa-facebook"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
       </footer>
     
 
